# geoverse

./: Cargo.toml  LICENSE  README.md
benches/: cache.rs
examples/: bin_example.rs  disk_deque.rs  in_memory_deque.rs  json_example.rs
src/: cache.rs  cache_config.rs  cache_key.rs  errors.rs  geo.rs  lib.rs  storage.rs
src/storage/: deque.rs  mod.rs
tests/: allocations.rs
