[package]
name = "geoverse"
version = "0.0.2"
edition = "2024"
description = "A simple library for caching reverse geocoding results"
license = "MIT"
authors = ["hlsxx"]
repository = "https://github.com/hlsxx/geoverse"
keywords = ["reverse-geocode", "geocode-cache"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
dhat = "0.3.3"
rand = "0.10.1"
tempfile = "3.27.0"

[features]
default = ["testing"]
dhat-heap = []
testing = []

[[bench]]
name = "cache"
harness = false

[[test]]
name = "allocations"
path = "tests/allocations.rs"
required-features = ["dhat-heap", "testing"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
